# gestion-reservas-discoteca-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_PROJECT.md  README_SUPABASE.md  SETUP_PYTHON.md  STATUS.md  alembic.ini  check_schema.py  docker-compose.yml  entrypoint.sh  init_db.py  pyproject.toml  render.yaml  requirements.txt  schema_db.sql  test_connection.py  verify.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/endpoints/: __init__.py  auth.py  eventos.py  events.py  order_details.py  orders.py  reservas.py  reservations.py  salas.py  table_prices.py  tables.py  tickets.py  type_tickets.py  users.py  usuarios.py
app/core/: config.py  constants.py  security.py
app/crud/: __init__.py  dico_table.py  event.py  evento.py  order.py  order_detail.py  payment.py  reserva.py  reservation.py  sala.py  table_price.py  ticket.py  type_ticket.py  usuario.py
app/db/: __init__.py  database.py
app/models/: __init__.py  audit.py  base.py  catalog.py  core.py  system.py  transactions.py  usuario.py
app/schemas/: __init__.py  auth.py  event.py  evento.py  order.py  order_detail.py  payment.py  reserva.py  reservation.py  sala.py  table.py  table_price.py  ticket.py  type_ticket.py  user.py  usuario.py
apps/audit/: models.py  serializers.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py  0002_initial.py
apps/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_schemas.py  0002_seed_catalog_data.py
apps/core/: admin.py  auth.py  exceptions.py  models.py  serializers.py  urls.py  urls_health.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_type_user_nullable.py
apps/system/: admin.py  models.py  serializers.py  urls.py  views.py
apps/system/migrations/: 0001_initial.py  0002_seed_app_config.py
apps/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
config/: settings.py  test_settings.py  urls.py
migrations/: env.py
migrations/versions/: e0fead662ea3_initial_crear_todas_las_tablas.py
tests/: conftest.py  test_auth.py  test_events.py  test_health.py  test_order_details.py  test_orders.py  test_reservations.py  test_table_prices.py  test_tables.py  test_tickets.py  test_type_tickets.py  test_users.py
(+1 files in other folders)
