[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-reservas-discoteca"
version = "2.0.0"
description = "Sistema de gestión de reservas para discotecas (Django)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tu Nombre", email = "tu.email@example.com"}]

[project.urls]
Repository = "https://github.com/bxZknith85/gestion-reservas-discoteca-backend"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["migrations", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RUF100"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
"config/test_settings.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["tests/test_*.py"]
testpaths = ["tests"]
